# btcmonitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
btcmonitor/: __init__.py  __main__.py  paths.py  rpc.py  ui.py
btcmonitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
